# investment-thesis-lens-rag

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: design.md  eval_questions.md  week4_retrospective.md  week5_retrieval_ablation.md  week6_retrospective.md  week6_workflow_diagram.md
docs/adr/: week6_agentic_rag.md
notebooks/: 01_naive_rag_walkthrough.ipynb  week4_chunking_experiments.ipynb  week4_data_analysis.ipynb  week5_retrieval_ablation.ipynb  week6_agentic_rag.ipynb
src/advanced_retrieval/: chunks.py  config.py  eval.py  ingest.py  retrievers.py
src/agentic_rag/: config.py  eval.py  graph.py  nodes.py  preprocess.py  retrieval.py  state.py
src/naive_rag/: __init__.py  chain.py  config.py  constants.py  embeddings.py  eval.py  loader.py  metadata.py  retriever.py  splitter.py  vectorstore.py
tests/: test_advanced_chunks.py  test_advanced_config.py  test_advanced_eval.py  test_advanced_ingest.py  test_advanced_retrievers.py  test_agentic_config.py  test_agentic_eval.py  test_agentic_graph.py  test_agentic_nodes.py  test_agentic_preprocess.py  test_agentic_retrieval.py  test_agentic_routing.py  test_chain.py  test_config.py  test_constants.py  test_embeddings.py  test_loader.py  test_metadata.py  test_retriever.py  test_splitter.py  test_vectorstore.py
