[project]
name = "naive-rag"
version = "0.1.0"
description = "Naive RAG study track over investment-domain YouTube transcripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kiwipiepy>=0.23.1",
    "langchain>=1.2.18",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "matplotlib>=3.10.9",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the real database, embedding model, or LLM",
]
